#add_subdirectory(helloworld)
#add_subdirectory(firstapp)
#add_subdirectory(a1DearImGui)
#add_subdirectory(tictactoe)
#add_subdirectory(sierpinski)
#add_subdirectory(coloredtriangles)
#add_subdirectory(regularpolygons)
#add_subdirectory(asteroids)
#add_subdirectory(a2Graph2D)



add_subdirectory(a3Model3D)
#add_subdirectory(3DModel)